--- a/_01intro.tex
+++ b/_01intro.tex
@@ -225,7 +225,7 @@ This is a new paragraph. Here is a list of animals
 Especially in the beginning (but even if you're a pro!), you will run into problems in your code. You either don't know how to do a specific thing in \LaTeX{} or you get an error message when your code won't compile. Google is your friend! Searching for ``how to do [xyz] in latex'' or searching for a meaningful portion of the error message will help you in nearly all cases. Some websites that are especially helpful are:
 
 \begin{itemize}
-\item \url{http://mirror.unl.edu/ctan/info/symbols/comprehensive/symbols-a4.pdf}. This PDF is a very comprehensive lists of symbols and how they can be reproduced in \LaTeX{}- Note that all of them require you to load a special package.
+\item \url{http://tug.ctan.org/info/symbols/comprehensive/symbols-a4.pdf}. This PDF is a very comprehensive lists of symbols and how they can be reproduced in \LaTeX{}- Note that all of them require you to load a special package.
 \item \url{http://detexify.kirelabs.org/classify.html} is a website where you can draw a symbol that you're trying to reproduce and it tries to find it. There are also Android/iOS apps that work similarly.
 \item \url{https://en.wikibooks.org/wiki/LaTeX} is a good source with examples for basic things.
 \end{itemize}
