--- a/_02tables.tex
+++ b/_02tables.tex
@@ -245,4 +245,4 @@ Similarly, you can use change font size with 10 different declarations. Note tha
 
 \subsubsection*{Colors}
 
-By loading the \texttt{xcolor} package, you can define your own colors or use the vast selection of default shades. It's as simple as \verb|\textcolor{red}{red}| to get \textcolor{red}{red}. Define your own colors by using \verb|\definecolor{name}{model}{color-spec}|. More information on color definition can be found \href{https://www.sharelatex.com/learn/Using_colours_in_LaTeX}{here}.
+By loading the \texttt{xcolor} package, you can define your own colors or use the vast selection of default shades. It's as simple as \verb|\textcolor{red}{red text}| to get \textcolor{red}{red text}. Define your own colors by using \\ \verb|\definecolor{name}{model}{color-spec}|. More information on color definition can be found \href{https://www.sharelatex.com/learn/Using_colours_in_LaTeX}{here}.
