--- a/_header.tex
+++ b/_header.tex
@@ -118,5 +118,5 @@
 }
 
 \title{Brief Introduction to \LaTeX}
-\author{Prepared by Anna Walsdorff}
+\author{Prepared by Anna Walsdorff \\ \href{mailto:anna.walsdorff@rochester.edu}{\texttt{anna.walsdorff@rochester.edu}}}
 \date{Updated: September 6, 2018}
