--- a/latex.tex
+++ b/latex.tex
@@ -7,11 +7,10 @@
 \maketitle
 
 \vspace*{4cm}
+\thispagestyle{empty}
 
 \end{titlepage}
 
-%\newpage
-\pagenumbering{arabic}
 
 \newpage
 
@@ -29,13 +28,15 @@ The source code for this document is available on Github at
 
 \bigskip%
 \noindent%
-This document incorporates material from previous \LaTeX{} courses by \href{http://www.chitralekha-basu.com/uploads/6/3/0/3/63033901/latex_for_absolute_beginners_-_part_one.pdf}{Chitralekha Basu} and  \href{https://drive.google.com/open?id=0BzD2LimxGIzIY083V0EzQUt6UmM}{Casey Crisman-Cox}.
+This document incorporates material from previous \LaTeX{} courses taught by \href{http://www.chitralekha-basu.com/uploads/6/3/0/3/63033901/latex_for_absolute_beginners_-_part_one.pdf}{Chitralekha Basu} and  \href{https://drive.google.com/open?id=0BzD2LimxGIzIY083V0EzQUt6UmM}{Casey Crisman-Cox}.
 
 \pagebreak
 
 \tableofcontents
+\thispagestyle{empty}
 
 \pagebreak
+\setcounter{page}{1}
 
 \section{Introduction and Basics}
 \input{_01intro}
