--- a/latex.tex
+++ b/latex.tex
@@ -41,15 +41,19 @@ This document incorporates material from previous \LaTeX{} courses taught by \hr
 \section{Introduction and Basics}
 \input{_01intro}
 
+\newpage
 \section{Tables, figures, footnotes, etc.}
 \input{_02tables}
 
+\newpage
 \section{Typing math}
 \input{_03math}
 
+\newpage
 \section{Presentations with beamer}
 \input{_04beamer}	
 
+\newpage
 \section{Managing citations with \hologo{BibTeX}}
 \input{_05bibtex}
 
