--- a/_02tables.tex
+++ b/_02tables.tex
@@ -55,7 +55,7 @@ Table \ref{tab:Stuff} shows just all the cool science we do.
 \end{document}
 \end{lstlisting}
 
-What does it all mean?
+\noindent What does it all mean?
 
 \begin{itemize}
 \item The entire table is between the \verb| \begin{table} ... \end{table}| commands. The \texttt{[h]} tells it we want the table placed ``here.'' This is just a suggestion as the software will place it where it thinks is best. Other options include \texttt{b} for bottom, \texttt{t} for top, and \texttt{p} for separate page. We use the centering command to center the table. I then gave it a caption and a label. You should always give your tables a caption because that tells the reader what's going on in the table. The label is for you to use to refer to the table within your document. We use the \verb|\ref| command to refer to the table in the text. This means that we never have to manually number or adjust the numbers. Quick note is that we can move caption and label to below the tabular commands and this
