--- a/_05bibtex.tex
+++ b/_05bibtex.tex
@@ -111,7 +111,7 @@ That figure sure was a pretty.\footnote{The prettiness of the figure was rated a
 \end{document}
 \end{lstlisting}
 
-
+\newpage
 \subsection*{Citing commands}
 
 We're now ready to do some citing. Table \ref{tab:Citations} shows a bunch of different ways to cite.
@@ -124,8 +124,8 @@ We're now ready to do some citing. Table \ref{tab:Citations} shows a bunch of di
   \begin{center}
     \begin{tabular}{ll}
 	Command & Output \\ \hline
-	\verb|\cite{Downs1957}| & Downs(1957) \\
-	\verb|\cite{Downs1957, Stokes1963}| & Downs (1957); Stokes (1963) \\
+	\verb|\citet{Downs1957}| & Downs (1957) \\
+	\verb|\citet{Downs1957, Stokes1963}| & Downs (1957); Stokes (1963) \\
 	\verb|\citep{Downs1957}| & (Downs, 1957) \\
 	\verb|\citeauthor{Downs1957}| & Downs \\
 	\verb|\citeyear{Downs1957}| & 1957 \\
@@ -139,4 +139,3 @@ We're now ready to do some citing. Table \ref{tab:Citations} shows a bunch of di
 
 The use of brackets adds notes to the citations. One set of brackets adds text to the end of the cite while two sets of brackets sandwiches the citation between the two bits of text. Other cite commands can be found \href{http://merkel.zoneo.net/Latex/natbib.php}{here} if you need more flexibility.
 
-Let's go ahead and add some citations to your own documents!
