--- a/_header.tex
+++ b/_header.tex
@@ -23,6 +23,8 @@
 \usepackage[nottoc,notlot,notlof,numbib]{tocbibind}
 \def\fns{\footnotesize}
 
+\setlength\parindent{0pt}
+
 \definecolor{cerulean}{rgb}{0.0, 0.48, 0.65}
 \definecolor{pansypurple}{rgb}{0.47, 0.09, 0.29}
 
@@ -34,7 +36,7 @@
 	citecolor=cerulean,
 	filecolor=black,
 	urlcolor=pansypurple,
-	pdftitle={Short Introducting to \LaTeX{}}, 
+	pdftitle={Brief Introducting to \LaTeX{}}, 
     pdfauthor={Anna Walsdorff}
 } 
 
@@ -119,4 +121,4 @@
 
 \title{Brief Introduction to \LaTeX}
 \author{Prepared by Anna Walsdorff \\ \href{mailto:anna.walsdorff@rochester.edu}{\texttt{anna.walsdorff@rochester.edu}}}
-\date{Updated: September 6, 2018}
+\date{Updated: \today}
